# fast-code

./: 00-RowVsCol.cpp  01-AddingWork.cpp  02-BranchPredictor.cpp  03-Pedestal.cpp  04-CacheLine.cpp  CMakeLists.txt  Crand.c  helper.hpp  hwy-add.cpp  pedestal.py
